# s3upload

./: README.md  pyproject.toml  upload.py
