[tool.poetry]
name = "s3upload"
version = "0.1.0"
description = ""
authors = ["Michal Przytulski <michal@przytulski.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.22"
loguru = "^0.6.0"
sentry-sdk = "^1.14.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
